#202 fix collapse error

--- a/app/assets/stylesheets/partials/_courses.scss
+++ b/app/assets/stylesheets/partials/_courses.scss
@@ -43,6 +43,7 @@ $course-img-height: 250px;
 
   .subnav {
     border-top: 1px solid $panel-default-border;
+    border-bottom: 1px solid $panel-default-border;
     background-color: $gray-lighter;
     width: 100%;
     height: 32px;
